# functional

./: CMakeLists.txt  README.md
Challenges/: overview.md
Challenges/1. Category - The Essense of Composition/: challenges.md
Challenges/2. Types and Functions/: challenges.md
Challenges/3. Categories Great and Small/: challenges.md
Challenges/4. Kleisli Categories/: challenges.md
Challenges/5. Products and Coproducts/: challenges.md
Challenges/6. Simple Algebraic Data Types/: challenges.md  functions.hs
source/categories/: CMakeLists.txt  categories.cpp
source/kleisli_categories/: CMakeLists.txt  kleisli_categories.cpp
source/types_and_functions/: CMakeLists.txt  types_and_functions.cpp
